blog-section,writing,outline & trending-content

--- a/public/css/input.css
+++ b/public/css/input.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -10,7 +12,9 @@ input::-webkit-inner-spin-button {
 input[type='number'] {
     -moz-appearance: textfield;
 }
-
+* {
+    font-family: 'Montserrat', sans-serif;
+}
 @layer components {
     .form-control {
         @apply block py-1 px-2 text-sm text-gray-900 bg-transparent border-b border-gray-300 appearance-none focus:outline-none focus:ring-0 focus:border-blue-600 mx-4;
