--- a/public/css/output.css
+++ b/public/css/output.css
@@ -694,17 +694,8 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-bottom: 0.5rem;
 }
 
-.mx-10{
-  margin-left: 2.5rem;
-  margin-right: 2.5rem;
-}
-
 .mr-14{
   margin-right: 3.5rem;
-}
-
-.mr-2{
-  margin-right: 0.5rem;
 }
 
 .mb-8{
@@ -741,6 +732,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .mt-16{
   margin-top: 4rem;
+}
+
+.mr-10{
+  margin-right: 2.5rem;
 }
 
 .ml-2{
@@ -811,10 +806,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-left: 0.75rem;
 }
 
-.ml-6{
-  margin-left: 1.5rem;
-}
-
 .mt-8{
   margin-top: 2rem;
 }
@@ -835,6 +826,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-right: 0.25rem;
 }
 
+.mr-2{
+  margin-right: 0.5rem;
+}
+
 .ml-4{
   margin-left: 1rem;
 }
@@ -845,14 +840,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .mt-3{
   margin-top: 0.75rem;
-}
-
-.mr-6{
-  margin-right: 1.5rem;
-}
-
-.mr-10{
-  margin-right: 2.5rem;
 }
 
 .block{
@@ -877,6 +864,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .hidden{
   display: none;
+}
+
+.aspect-square{
+  aspect-ratio: 1 / 1;
 }
 
 .h-4{
@@ -931,16 +922,12 @@ Ensure the default browser behavior of the `hidden` attribute.
   height: auto;
 }
 
-.min-h-screen{
-  min-height: 100vh;
-}
-
-.min-h-\[300px\]{
-  min-height: 300px;
-}
-
 .min-h-\[250px\]{
   min-height: 250px;
+}
+
+.min-h-screen{
+  min-height: 100vh;
 }
 
 .w-full{
@@ -987,6 +974,12 @@ Ensure the default browser behavior of the `hidden` attribute.
   width: 100vw;
 }
 
+.w-fit{
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+}
+
 .w-3\/4{
   width: 75%;
 }
@@ -995,20 +988,24 @@ Ensure the default browser behavior of the `hidden` attribute.
   width: 16rem;
 }
 
-.w-auto{
-  width: auto;
+.w-96{
+  width: 24rem;
+}
+
+.w-48{
+  width: 12rem;
 }
 
 .min-w-\[180px\]{
   min-width: 180px;
 }
 
-.min-w-\[200px\]{
-  min-width: 200px;
+.min-w-\[120px\]{
+  min-width: 120px;
 }
 
-.min-w-\[100px\]{
-  min-width: 100px;
+.min-w-\[200px\]{
+  min-width: 200px;
 }
 
 .max-w-\[1200px\]{
@@ -1021,6 +1018,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .max-w-lg{
   max-width: 32rem;
+}
+
+.max-w-\[250px\]{
+  max-width: 250px;
 }
 
 .max-w-6xl{
@@ -1047,12 +1048,8 @@ Ensure the default browser behavior of the `hidden` attribute.
   max-width: 80rem;
 }
 
-.max-w-\[200px\]{
-  max-width: 200px;
-}
-
-.max-w-\[250px\]{
-  max-width: 250px;
+.max-w-\[1300px\]{
+  max-width: 1300px;
 }
 
 .flex-1{
@@ -1081,6 +1078,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   grid-template-columns: repeat(1, minmax(0, 1fr));
 }
 
+.grid-rows-2{
+  grid-template-rows: repeat(2, minmax(0, 1fr));
+}
+
 .flex-row{
   flex-direction: row;
 }
@@ -1095,6 +1096,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .items-center{
   align-items: center;
+}
+
+.justify-end{
+  justify-content: flex-end;
 }
 
 .justify-center{
@@ -1117,8 +1122,17 @@ Ensure the default browser behavior of the `hidden` attribute.
   gap: 1rem;
 }
 
+.gap-6{
+  gap: 1.5rem;
+}
+
 .gap-10{
   gap: 2.5rem;
+}
+
+.gap-x-4{
+  -moz-column-gap: 1rem;
+       column-gap: 1rem;
 }
 
 .gap-y-2{
@@ -1239,14 +1253,19 @@ Ensure the default browser behavior of the `hidden` attribute.
   border-color: rgb(243 244 246 / var(--tw-border-opacity));
 }
 
+.bg-white{
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
 .bg-indigo-600{
   --tw-bg-opacity: 1;
   background-color: rgb(79 70 229 / var(--tw-bg-opacity));
 }
 
-.bg-white{
+.bg-gray-100{
   --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+  background-color: rgb(243 244 246 / var(--tw-bg-opacity));
 }
 
 .bg-blue-100{
@@ -1288,20 +1307,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   background-color: rgb(229 231 235 / var(--tw-bg-opacity));
 }
 
-.bg-blue-500{
-  --tw-bg-opacity: 1;
-  background-color: rgb(59 130 246 / var(--tw-bg-opacity));
-}
-
-.bg-gray-100{
-  --tw-bg-opacity: 1;
-  background-color: rgb(243 244 246 / var(--tw-bg-opacity));
-}
-
-.bg-opacity-50{
-  --tw-bg-opacity: 0.5;
-}
-
 .bg-opacity-70{
   --tw-bg-opacity: 0.7;
 }
@@ -1340,6 +1345,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   padding: 0.75rem;
 }
 
+.p-5{
+  padding: 1.25rem;
+}
+
 .px-4{
   padding-left: 1rem;
   padding-right: 1rem;
@@ -1360,14 +1369,14 @@ Ensure the default browser behavior of the `hidden` attribute.
   padding-right: 0.75rem;
 }
 
-.py-3{
-  padding-top: 0.75rem;
-  padding-bottom: 0.75rem;
-}
-
 .px-6{
   padding-left: 1.5rem;
   padding-right: 1.5rem;
+}
+
+.py-3{
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
 }
 
 .px-1{
@@ -1480,16 +1489,24 @@ Ensure the default browser behavior of the `hidden` attribute.
   padding-bottom: 1rem;
 }
 
-.pt-2{
-  padding-top: 0.5rem;
-}
-
 .pl-2{
   padding-left: 0.5rem;
 }
 
+.pt-2{
+  padding-top: 0.5rem;
+}
+
+.pl-5{
+  padding-left: 1.25rem;
+}
+
 .pl-4{
   padding-left: 1rem;
+}
+
+.pt-5{
+  padding-top: 1.25rem;
 }
 
 .pr-3{
@@ -1510,14 +1527,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .pr-10{
   padding-right: 2.5rem;
-}
-
-.pl-6{
-  padding-left: 1.5rem;
-}
-
-.pl-5{
-  padding-left: 1.25rem;
 }
 
 .text-left{
@@ -1571,8 +1580,8 @@ Ensure the default browser behavior of the `hidden` attribute.
   line-height: 1.75rem;
 }
 
-.text-6xl{
-  font-size: 3.75rem;
+.text-5xl{
+  font-size: 3rem;
   line-height: 1;
 }
 
@@ -1589,8 +1598,8 @@ Ensure the default browser behavior of the `hidden` attribute.
   font-size: 42px;
 }
 
-.text-5xl{
-  font-size: 3rem;
+.text-6xl{
+  font-size: 3.75rem;
   line-height: 1;
 }
 
@@ -1725,27 +1734,27 @@ Ensure the default browser behavior of the `hidden` attribute.
   opacity: 0.25;
 }
 
-.shadow{
-  --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
 .shadow-sm{
   --tw-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
   --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
-.shadow-lg{
-  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+.shadow{
+  --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
 .shadow-md{
   --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-lg{
+  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
@@ -1760,14 +1769,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .outline-2{
   outline-width: 2px;
-}
-
-.outline-gray-200{
-  outline-color: #e5e7eb;
-}
-
-.outline-gray-900{
-  outline-color: #111827;
 }
 
 .outline-gray-100{
@@ -1850,14 +1851,19 @@ input[type='number'] {
   border-color: rgb(67 56 202 / var(--tw-border-opacity));
 }
 
+.hover\:bg-blue-50:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 246 255 / var(--tw-bg-opacity));
+}
+
 .hover\:bg-indigo-700:hover{
   --tw-bg-opacity: 1;
   background-color: rgb(67 56 202 / var(--tw-bg-opacity));
 }
 
-.hover\:bg-blue-50:hover{
+.hover\:bg-gray-200:hover{
   --tw-bg-opacity: 1;
-  background-color: rgb(239 246 255 / var(--tw-bg-opacity));
+  background-color: rgb(229 231 235 / var(--tw-bg-opacity));
 }
 
 .hover\:bg-indigo-600:hover{
@@ -1879,28 +1885,9 @@ input[type='number'] {
   background-color: rgb(29 78 216 / var(--tw-bg-opacity));
 }
 
-.hover\:bg-gray-200:hover{
-  --tw-bg-opacity: 1;
-  background-color: rgb(229 231 235 / var(--tw-bg-opacity));
-}
-
 .hover\:bg-gray-300:hover{
   --tw-bg-opacity: 1;
   background-color: rgb(209 213 219 / var(--tw-bg-opacity));
-}
-
-.hover\:bg-blue-600:hover{
-  --tw-bg-opacity: 1;
-  background-color: rgb(37 99 235 / var(--tw-bg-opacity));
-}
-
-.hover\:bg-gray-100:hover{
-  --tw-bg-opacity: 1;
-  background-color: rgb(243 244 246 / var(--tw-bg-opacity));
-}
-
-.hover\:bg-opacity-100:hover{
-  --tw-bg-opacity: 1;
 }
 
 .hover\:text-indigo-700:hover{
@@ -1982,10 +1969,6 @@ input[type='number'] {
     width: 5rem;
   }
 
-  .sm\:w-auto{
-    width: auto;
-  }
-
   .sm\:grid-cols-2{
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
@@ -1994,8 +1977,9 @@ input[type='number'] {
     flex-direction: row;
   }
 
-  .sm\:justify-start{
-    justify-content: flex-start;
+  .sm\:px-0{
+    padding-left: 0px;
+    padding-right: 0px;
   }
 
   .sm\:py-2{
@@ -2038,11 +2022,6 @@ input[type='number'] {
     padding-bottom: 3rem;
   }
 
-  .sm\:px-0{
-    padding-left: 0px;
-    padding-right: 0px;
-  }
-
   .sm\:text-center{
     text-align: center;
   }
@@ -2080,11 +2059,6 @@ input[type='number'] {
   .sm\:text-4xl{
     font-size: 2.25rem;
     line-height: 2.5rem;
-  }
-
-  .sm\:text-7xl{
-    font-size: 4.5rem;
-    line-height: 1;
   }
 
   .sm\:font-bold{
@@ -2135,8 +2109,12 @@ input[type='number'] {
     width: 200px;
   }
 
-  .md\:min-w-\[180px\]{
-    min-width: 180px;
+  .md\:min-w-\[200px\]{
+    min-width: 200px;
+  }
+
+  .md\:min-w-\[140px\]{
+    min-width: 140px;
   }
 
   .md\:max-w-md{
@@ -2169,6 +2147,11 @@ input[type='number'] {
     margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)));
   }
 
+  .md\:px-8{
+    padding-left: 2rem;
+    padding-right: 2rem;
+  }
+
   .md\:px-0{
     padding-left: 0px;
     padding-right: 0px;
@@ -2187,11 +2170,6 @@ input[type='number'] {
   .md\:px-20{
     padding-left: 5rem;
     padding-right: 5rem;
-  }
-
-  .md\:px-8{
-    padding-left: 2rem;
-    padding-right: 2rem;
   }
 
   .md\:pr-4{
@@ -2220,6 +2198,11 @@ input[type='number'] {
     line-height: 1.5rem;
   }
 
+  .md\:text-7xl{
+    font-size: 4.5rem;
+    line-height: 1;
+  }
+
   .md\:text-lg{
     font-size: 1.125rem;
     line-height: 1.75rem;
@@ -2238,11 +2221,6 @@ input[type='number'] {
   .md\:text-xs{
     font-size: 0.75rem;
     line-height: 1rem;
-  }
-
-  .md\:text-7xl{
-    font-size: 4.5rem;
-    line-height: 1;
   }
 }
 
@@ -2351,8 +2329,16 @@ input[type='number'] {
     max-width: 100%;
   }
 
+  .lg\:grid-cols-2{
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
   .lg\:grid-cols-4{
     grid-template-columns: repeat(4, minmax(0, 1fr));
+  }
+
+  .lg\:grid-rows-1{
+    grid-template-rows: repeat(1, minmax(0, 1fr));
   }
 
   .lg\:flex-row{
@@ -2460,11 +2446,6 @@ input[type='number'] {
 
   .lg\:text-5xl{
     font-size: 3rem;
-    line-height: 1;
-  }
-
-  .lg\:text-7xl{
-    font-size: 4.5rem;
     line-height: 1;
   }
 }
